fix another contrast issue

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -91,3 +91,7 @@ div.opblock-get span.opblock-summary-method
 div.opblock-post span.opblock-summary-method
   color #ffffff !important
   background-color #2d7d32 !important
+
+/* Improve color contrast for parameter indicators to meet WCAG AA accessibility standards */
+div.parameter__in
+  color #4a4a4a !important
